--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+/* my own mods */
 @import url(./var.css);
 @import url(./anchors.css);
-/* my own mods */
+
 * {
     margin: 0;
     padding: 0;
@@ -30,16 +31,40 @@ body {
     grid-area: top-menu;
     background-color: var(--topbar-bg-color);
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
 }
-.logo-container {
+.logo-container, .search-container, .personal-account {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
 }
+.search-container input {
+    width: 40rem;
+    padding: 6px;
+    font-size: 17px;
+    border: 1px #313131 solid;
+    background-color: black;
+}
+.topbar .search-container button {
+    float: right;
+    padding: 6px 25px;
+    margin-right: 16px;
+    background: #313131;
+    font-size: 17px;
+    cursor: pointer;
+    border: 1px #313131 solid;
+  }
+ .b-icon {
+    color: var(--left-icon-color);
+  }
+  .mic-icon {
+    padding: 9px;
+    background-color: black;
+    border-radius: 50%;
+  }
 .logo {
-   width: 120px;
+   width: 130px;
 }
 .myavatar {
     width: 50px;
@@ -63,7 +88,14 @@ body {
 .account {
     grid-area: about;
     background-color:var(--account-mainnav-bg-color);
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
 }
+
+
+
+
 .main-nav {
     grid-area: main-menu;
     background-color: var(--account-mainnav-bg-color);
@@ -90,7 +122,6 @@ body {
 .banner-photo {
     height: 100%;
     width: 100%;
-    
   }
 
 .avatar {
