adding logos into the left sidebar container SUBSCRIPTIONS

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,14 @@ hr {
 .left-sidebar ul li {
     list-style: none;
   }
-
+.left-sidebar ul li img {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    /* display: inline;
+    justify-content: center;
+    align-items: center; */
+}
 
 
 
