--- a/css/var.css
+++ b/css/var.css
@@ -7,5 +7,5 @@
     --left-sidebar-bg-color: #212121;
     --account-mainnav-bg-color: #181818;
     --content-bg-color: #0f0f0f;
-    --left-icon-color: #909090;
+    --border-color: #313131;
   }
