adding the first video in Content

--- a/css/style.css
+++ b/css/style.css
@@ -158,10 +158,7 @@ hr {
     list-style: none;
   }
 
-
-
-
-
+/* Content */
 .content {
     grid-area: main;
     background-color: var(--content-bg-color);
